# PPP-code

./: .gitignore  CMakeLists.txt  README.md  gui.cmake  run_test.cmake  terms.md  terms.txt  testing.cmake
ch02/: CMakeLists.txt  exec1.cpp  hello_world.cpp
ch03/: CMakeLists.txt  detect_repeated_words.cpp  double_operators.cpp  exec3-10.cpp  exec3-11.cpp  exec3-2.cpp  exec3-4.cpp  exec3-5.cpp  exec3-6.cpp  exec3-7.cpp  exec3-8.cpp  exec3-9.cpp  find_repeated_words.cpp  integer_operators.cpp  letter_generator.cpp  read_and_compare_names.cpp  read_and_write_first_name.cpp  read_full_name.cpp  read_full_name_v2.cpp  read_name_and_age.cpp  read_name_and_age_v2.cpp  read_name_and_age_v3.cpp  unsafe_conversions.cpp
ch04/: CMakeLists.txt  bleep_disliked_words.cpp  convert_currency.cpp  convert_currency_switch.cpp  convert_length_unit.cpp  convert_length_unit_v2.cpp  exec4-10.cpp  exec4-12.cpp  exec4-14.cpp  exec4-16.cpp  exec4-17.cpp  exec4-18.cpp  exec4-21.cpp  exec4-3.cpp  exec4-4.cpp  exec4-5.cpp  exec4-6.cpp  exec4-9.cpp  length_statistics.cpp  mean_median_temperature.cpp  print_character_table.cpp  print_character_table_v2.cpp  print_squares_table.cpp  print_squares_table_v2.cpp  simple_dictionary.cpp
ch05/: CMakeLists.txt  area.cpp  area.h  area_test.cpp  bulls_and_cows.cpp  fibonacci_series.cpp  solve_equation.cpp  solve_equation_test.cpp  solve_quadratic_equation.cpp  solve_quadratic_equation.h  solve_quadratic_equation_test.cpp  sum_n_integers.cpp  temperature_converters.cpp  temperature_converters.h  temperature_converters_test.cpp  temperature_stats_buggy.cpp  temperature_stats_fixed.cpp
ch06/: CMakeLists.txt  calculator_v0.cpp  exec6-10.cpp  exec6-4.cpp  exec6-5.txt  exec6-7.txt  exec6-9.cpp
ch08/: CMakeLists.txt  describe_vector.cpp  describe_vector.h  describe_vector_test.cpp  drill8-3.cpp  exec8-7.cpp  fibonacci.cpp  fibonacci.h  fibonacci_test.cpp  inner_product.cpp  inner_product.h  inner_product_test.cpp  my.cpp  my.h  print_until.cpp  print_until.h  print_until_test.cpp  print_vector.cpp  print_vector.h  print_vector_test.cpp  reverse_vector.cpp  reverse_vector.h  reverse_vector_test.cpp  swaps.cpp  swaps.h  swaps_test.cpp  use.cpp
ch09/: CMakeLists.txt  Chrono.cpp  Chrono.h  Chrono_test.cpp  book.cpp  book.h  book_test.cpp  library.cpp  library.h  library_test.cpp  name_pairs.cpp  name_pairs.h  name_pairs_test.cpp  nesting_example.cpp  patron.cpp  patron.h  patron_test.cpp  relational.cpp  relational.h  relational_test.cpp
ch10/: CMakeLists.txt  exec10-1.cpp  exec10-11.cpp  exec10-8.cpp  exec10-9.cpp  fill_vector.cpp  fill_vector.h  fill_vector_test.cpp  get_int.cpp  get_int.h  get_int_test.cpp  read_integer_in_range.cpp  read_structured_temperatures.cpp  read_temperatures.cpp  read_write_points.cpp  roman_int.cpp  roman_int.h  roman_int_test.cpp  store_temps.cpp  temp_stats.cpp  temperature_reading.cpp  temperature_reading.h  temperature_reading_test.cpp
ch11/: CMakeLists.txt  custom_separator_dictionary.cpp  custom_separator_dictionary_v2.cpp  exec11-1.cpp  exec11-12.cpp  exec11-13.cpp  exec11-14.cpp  exec11-15.cpp  exec11-16.cpp  exec11-2.cpp  exec11-3.cpp  exec11-4.cpp  exec11-5.cpp  input_integer_in_different_bases.cpp  output_float_in_different_formats.cpp  output_integer_in_different_bases.cpp  print_contact_table.cpp  punct_stream.cpp  punct_stream.h  punct_stream_test.cpp  punct_stream_v2.cpp  punct_stream_v2.h  punct_stream_v2_test.cpp  read_write_binary_file.cpp  set_field_width.cpp  set_precision.cpp  split.cpp  split.h  split_test.cpp  str_to_double.cpp  str_to_double.h  str_to_double_test.cpp
ch12/: CMakeLists.txt  draw_triangle.cpp  exec12-1.cpp  exec12-11.cpp  exec12-12.cpp  exec12-2.cpp  exec12-3.cpp  exec12-4.cpp  exec12-7.cpp  exec12-8.cpp  exec12_graph.cpp  exec12_graph.h  hello_fltk.cpp  shape_primitives.cpp
ch13/: CMakeLists.txt  draw_circles.cpp  draw_closed_polyline.cpp  draw_color_matrix.cpp  draw_ellipses.cpp  draw_grid.cpp  draw_images.cpp  draw_marked_polyline.cpp  draw_marks.cpp  draw_open_polyline.cpp  draw_polygon.cpp  draw_rectangles.cpp  draw_two_lines.cpp  draw_two_lines2.cpp  exec13-1.cpp  exec13-11.cpp  exec13-12.cpp  exec13-2.cpp  exec13-3.cpp  exec13-4.cpp  exec13-5.cpp  exec13-6.cpp  exec13-9.cpp  exec13_graph.cpp  exec13_graph.h  magic_tower.cpp
ch14/: CMakeLists.txt  controller.cpp  controller.h  controller_test.cpp  drill14.cpp  exec14-1.cpp  exec14-11.cpp  exec14_graph.cpp  exec14_graph.h  iterator.cpp  iterator.h  iterator_test.cpp  overriding_example.cpp
ch15/: CMakeLists.txt  exec15-11.cpp  exec15-2.cpp  exec15-4.cpp  exec15-5.cpp  exec15-8.cpp  exec15_graph.cpp  exec15_graph.h  exp_approximation.cpp  factorial.cpp  factorial.h  factorial_test.cpp  function_graphing_drill.cpp  graphing_functions.cpp  graphing_japanese_age.cpp  person.cpp  person.h  person_test.cpp
ch16/: CMakeLists.txt  draw_lines.cpp  exec16-10.cpp  exec16-3.cpp  exec16-4.cpp  exec16-6.cpp  exec16-9.cpp  lines_window.cpp  lines_window.h
ch17/: CMakeLists.txt  destructor_example.cpp  doubly_linked_list.cpp  doubly_linked_list.h  doubly_linked_list_test.cpp  doubly_linked_list_v2.cpp  doubly_linked_list_v2.h  doubly_linked_list_v2_test.cpp  drill17.cpp  exec17-13.cpp  exec17-2.cpp  exec17-7.cpp  exec17-9.cpp  god.cpp  god.h  linked_list_use.cpp  linked_list_use_v2.cpp  simple_vector.h  simple_vector_test.cpp  sizeof_example.cpp  string_algorithm_exec17.cpp  string_algorithm_exec17.h  string_algorithm_exec17_test.cpp
ch18/: CMakeLists.txt  debug_ctor_dtor.cpp  drill18.cpp  palindrome.cpp  palindrome.h  palindrome_test.cpp  simple_vector.cpp  simple_vector.h  simple_vector_test.cpp  string_algorithm_exec18.cpp  string_algorithm_exec18.h  string_algorithm_exec18_test.cpp
ch19/: CMakeLists.txt  counted_element.cpp  counted_element.h  counted_ptr.h  counted_ptr_test.cpp  doubly_linked_list_v3.cpp  doubly_linked_list_v3.h  doubly_linked_list_v3_test.cpp  drill19.cpp  exec19-4.cpp  inner_product.cpp  inner_product.h  inner_product_test.cpp  number.cpp  number.h  number_test.cpp  pair.cpp  pair.h  simple_allocator.cpp  simple_allocator.h  (+15 more)
(+472 files in other folders)
