add_library(Chrono Chrono.cpp)
add_library(name_pairs name_pairs.cpp)
add_library(book book.cpp)
target_link_libraries(book Chrono)
add_library(patron patron.cpp)
add_library(library library.cpp)
target_link_libraries(library Chrono book patron)
add_library(relational relational.cpp)

add_gtest(NAME Chrono_test SOURCE Chrono_test.cpp LIBRARY Chrono)
add_gtest(NAME name_pairs_test SOURCE name_pairs_test.cpp LIBRARY name_pairs)
add_gtest(NAME book_test SOURCE book_test.cpp LIBRARY book)
add_gtest(NAME patron_test SOURCE patron_test.cpp LIBRARY patron)
add_gtest(NAME library_test SOURCE library_test.cpp LIBRARY library GMOCK)
add_gtest(NAME relational_test SOURCE relational_test.cpp LIBRARY relational)
